// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Transparent Background 1`] = `
Array [
  <div
    className="sc-htpNat csXghi"
  >
    <div
      className="sc-bxivhb bLRHtd"
    >
      <ul
        className="sc-ifAKCX fdVqfR"
      >
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-dxgOiQ eCyCnV"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-ckVGcZ bByFYV"
    >
      <a
        aria-current="page"
        className="sc-jKJlTe jALKvc"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-eNQAEJ dfIhly"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-fjdhpX eqtoOA"
      >
        <ul
          className="sc-jzJRlG kvxIqi"
        >
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-kAzzGY kSFAtW"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jTzLTM ehMPIt"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-VigVT hLIOJs"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-bdVaJa cpKyYQ"
      >
        <img
          alt=""
          className="sc-bwzfXH cWNFVp"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots Header With Demo Data 1`] = `
Array [
  <div
    className="sc-htpNat csXghi"
  >
    <div
      className="sc-bxivhb bLRHtd"
    >
      <ul
        className="sc-ifAKCX fdVqfR"
      >
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-dxgOiQ feterq"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-ckVGcZ bByFYV"
    >
      <a
        aria-current="page"
        className="sc-jKJlTe jALKvc"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-eNQAEJ dfIhly"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-fjdhpX eqtoOA"
      >
        <ul
          className="sc-jzJRlG kvxIqi"
        >
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-kAzzGY cgevdj"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jTzLTM ehMPIt"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-VigVT hLIOJs"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-bdVaJa iySLTE"
      >
        <img
          alt=""
          className="sc-bwzfXH cWNFVp"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots Header With Overflowing Content 1`] = `
Array [
  <div
    className="sc-htpNat csXghi"
  >
    <div
      className="sc-bxivhb bLRHtd"
    >
      <ul
        className="sc-ifAKCX fdVqfR"
      >
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-dxgOiQ feterq"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-ckVGcZ bByFYV"
    >
      <a
        aria-current="page"
        className="sc-jKJlTe jALKvc"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-eNQAEJ dfIhly"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-fjdhpX eqtoOA"
      >
        <ul
          className="sc-jzJRlG kvxIqi"
        >
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-kAzzGY cgevdj"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY higVxZ"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jTzLTM ehMPIt"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-VigVT hLIOJs"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-bdVaJa iySLTE"
      >
        <img
          alt=""
          className="sc-bwzfXH cWNFVp"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    style={
      Object {
        "background": "linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%)",
        "height": "200vh",
        "width": "100%",
      }
    }
  />,
]
`;
